--- a/assets/index.html
+++ b/assets/index.html
@@ -5,9 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>JavaScript Knowledge Quiz</title>
 </head>
 <body>
-    <p>This</p>
+    <div class="container">
+        <div id="home" class="flex-center flex-column">
+            <h1>Quiz Time!!</h1>
+            <a class="btn" href="/game.html">Play</a>
+            <a class="btn" href="/highscores.html">HIgh Scores</a>
+         </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
