--- a/assets/game.html
+++ b/assets/game.html
@@ -13,18 +13,20 @@
         <div id="game" class="justify-center flex-column">
             <div id ="hud">
                 <div id="hud-item";>
-                    <p class="hud-prefix">
-                        Queston
-                    </p>
-                    <h1 class="hud-main-text" id="questionCounter"></h1>
-                </div>
-                <div id="hud-item";>
-                    <p class="hud-prefix">
-                        Score
-                    </p>
-                    <h1 class="hud-main-text" id="score">
+                        <p id="progressText" class="hud-prefix">
+                         Queston
+                        </p>
+                        <div id="progressBar">
+                            <div id="progressBarFull"></div>
+                            </div>
+                        </div>
+                        <div id="hud-item">
+                            <p class="hud-prefix">
+                                Score
+                            </p>
+                        <h1 class="hud-main-text" id="score">
                         0
-                    </h1>
+                        </h1>
                 </div>
             </div>
             <h2 id="question">What is the answer you seek?</h2>
