commit to connect end page to main

--- a/assets/end.html
+++ b/assets/end.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="game.css" />
+    <link rel="stylesheet" href="game.css">
     <title>End Game!</title>
 </head>
 <body>
@@ -29,11 +29,11 @@
                 Save
             </button>
             </form>
-            <a class="btn" href="/game.html">Play Again</a>
-            <a class="btn" href="/">Go Home</a>
+            <button class="btn" id="playAgainBtn">Play Again</button>
+            <a class="btn" href="/index.html/">Go Home</a>
         </div>
 
     </div>
-    <script scr="end.js"></script>
+    <script src="end.js"></script>
 </body>
 </html>
