--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css">
     <title>JavaScript Knowledge Quiz</title>
 </head>
 <body>
@@ -12,7 +12,7 @@
         <div id="home" class="flex-center flex-column">
             <h1>Quiz Time!!</h1>
             <a class="btn" href="/game.html">Play</a>
-            <a class="btn" href="/highscores.html">HIgh Scores</a>
+            <a class="btn" href="/highscores.html">High Scores</a>
          </div>
     </div>
     <script src="script.js"></script>
