--- a/assets/end.html
+++ b/assets/end.html
@@ -1,39 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="game.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="game.css" />
     <title>End Game!</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <div id="end" class="flexx-center flex-column">
-            <h1 id="finalScore">0</h1>
-            <form>
-                <input
-                    type="text"
-                    name="username"
-                    id="username"
-                    placeholder="username"
-                    />
-                    <button
-                    type="submit"
-                    class="btn"
-                    id="saveScoreBtn"
-                    onclick="saveHighScore(event)"
-                    disabled
-                    >
-                Save
-            </button>
-            </form>
-            <button class="btn" id="playAgainBtn">Play Again</button>
-            <a class="btn" href="/index.html/">Go Home</a>
-        </div>
-
+      <div id="end" class="flexx-center flex-column">
+        <h1 id="finalScore">0</h1>
+        <form>
+          <input
+            type="text"
+            name="username"
+            id="username"
+            placeholder="username"
+          />
+          <button
+            type="submit"
+            class="btn"
+            id="saveScoreBtn"
+            onclick="saveHighScore(event)"
+            disabled
+          >
+            Save
+          </button>
+        </form>
+        <button class="btn" id="playAgainBtn">Play Again</button>
+        <a class="btn" href="/index.html/">Go Home</a>
+      </div>
     </div>
     <script src="end.js"></script>
-</body>
+  </body>
 </html>
