--- a/assets/highscores.html
+++ b/assets/highscores.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>High Scores!</title>
-    <link rel="stylesheet" href="styles.css">
-    
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <div class="container">
-        <div id="highscores" class="flex-center flex-column">
-            <h1 id="finalScore">High Scores</h1>
-            <ul id="highScoresList"></ul>
-            <a class="btn" href="/">Go Home</a>
-        </div>
+      <div id="highscores" class="flex-center flex-column">
+        <h1 id="finalScore">High Scores</h1>
+        <ul id="highScoresList"></ul>
+        <a class="btn" href="/">Go Home</a>
+      </div>
     </div>
     <script src="highscores.js"></script>
-</body>
+  </body>
 </html>
