cleaned up w Dru

--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/styles.css"/>
     <title>JavaScript Knowledge Quiz</title>
   </head>
   <body>
     <div class="container">
       <div id="home" class="flex-center flex-column">
         <h1>Quiz Time!!</h1>
-        <a class="btn" href="/game.html">Play</a>
-        <a class="btn" href="/highscores.html">High Scores</a>
+        <a class="btn" href="./assets/game.html">Play</a>
+        <a class="btn" href="./assets/highscores.html">High Scores</a>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
